<resources>
    <string name="app_name">TrackOne</string>
    <string name="signIn">SIGN IN</string>
    <string name="signUp">SIGN UP</string>
    <string name="logIn">LOG IN</string>
    <string name="inviteDescription">Save this Invite Code. Your friends will need it to join your circle</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_join_circle">Join a Circle</string>
    <string name="menu_my_circle">My Circle</string>
    <string name="menu_joined_circles">Joined Circles</string>
    <string name="menu_share_location">Share Location</string>
    <string name="menu_stop_sharing_location">Stop Sharing Location</string>
    <string name="menu_share_location_to_whatsapp_msg">Share Location(Whatsapp/MSG)</string>
    <string name="menu_invite_members">Invite Members</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="title_activity_my_navigation">Map</string>
    <string name="title_activity_user_location_main">UserLocationMainActivity</string>

    <string name="join_circle">Enter Circle Code to Connect</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
